force-app/main/default/objects/LPCR_BonAchatPartenaire__c/LPCR_BonAchatPartenaire__c.object-meta.xml
<CustomObject>
    <description>Stockage des bons d&#39;achat gestionnaire</description>
    <label>Bon d&#39;achat gestionnaire</label>
    <nameField>
        <label>Numéro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bons d&#39;achat gestionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>