force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ANatitre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ANatitre__c</fullName>
    <formula>LPCR_Demande__r.LPCR_ANaitre__c</formula>
    <label>A naitre</label>
    <type>Checkbox</type>
</CustomField>