force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_Client__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bons d&#39;achat partenaires (Client)</relationshipLabel>
    <relationshipName>Bons_d_achat_partenaires</relationshipName>
    <type>Lookup</type>
</CustomField>