force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ComptePartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ComptePartenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte partenaire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bons d&apos;achat partenaires</relationshipLabel>
    <relationshipName>BonsAchatPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>