force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ContactEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Enfant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bons d&#39;achat partenaires</relationshipLabel>
    <relationshipName>BonsAchatPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>