force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ContactLPCR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactLPCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>contact LPCR signataire du bon d&apos;achat</description>
    <label>Contact LPCR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BonsAchatsPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>