force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ContactPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPartenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>contact auquel on envoie le bon d&#39;achat partenaire</description>
    <label>Contact Partenaire</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bons d&#39;achat partenaires (Contact Partenaire)</relationshipLabel>
    <relationshipName>BonsAchatsPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>