force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ContratClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Client</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Bons d&#39;achat partenaires</relationshipLabel>
    <relationshipName>BonsAchatspartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>