force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ContratPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratPartenaire__c</fullName>
    <label>Contrat Partenaire</label>
    <referenceTo>LPCR_ContratPartenaire__c</referenceTo>
    <relationshipLabel>Bons d&#39;achat</relationshipLabel>
    <relationshipName>BonsAchatPartenaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>