force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_ContratReservataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratReservataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lien vers le contrat du client réservataire</description>
    <label>Contrat de Réservation</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Bons d&apos;achat partenaires</relationshipLabel>
    <relationshipName>BonsAchatsPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>