force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_DateDebutFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutFacturation__c</fullName>
    <label>Date de début facturation</label>
    <type>Date</type>
</CustomField>