force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_DateDebutPrestation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutPrestation__c</fullName>
    <label>Date de début prestation</label>
    <type>Date</type>
</CustomField>