force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_DateFinPrestation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFinPrestation__c</fullName>
    <label>Date de fin prestation</label>
    <type>Date</type>
</CustomField>