force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_DateNaissance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateNaissance__c</fullName>
    <formula>LPCR_ContactEnfant__r.Birthdate</formula>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>