force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_Demande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Demande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bons d&#39;achat</relationshipLabel>
    <relationshipName>BonsAchatPartenaire</relationshipName>
    <type>Lookup</type>
</CustomField>