force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_DevisReservataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DevisReservataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Au moins un devis ou un contrat réservataire doit être renseigné</description>
    <label>Devis Réservataire</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Bons d&apos;achat partenaires</relationshipLabel>
    <relationshipName>BonsAchatPartenaires</relationshipName>
    <type>Lookup</type>
</CustomField>