force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_EmailFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EmailFamille__c</fullName>
    <formula>LPCR_ContactEnfant__r.LPCR_Representant1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Famille</label>
    <type>Text</type>
</CustomField>