force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_NombreJoursSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursSemaine__c</fullName>
    <label>Nombre de jours par semaine</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>