force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_PrixAchat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixAchat__c</fullName>
    <label>Prix d&apos;achat</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>