force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_PrixVente__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixVente__c</fullName>
    <label>Prix de vente</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>