force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_Representant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Representant1__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;LPCR_ContactEnfant__r.LPCR_Representant1__c,  LPCR_ContactEnfant__r.LPCR_Representant1__r.FirstName &amp;&apos; &apos;&amp; LPCR_ContactEnfant__r.LPCR_Representant1__r.LastName)</formula>
    <label>Représentant 1</label>
    <type>Text</type>
</CustomField>