force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_Representant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Representant2__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;&amp;LPCR_ContactEnfant__r.LPCR_Representant2__c,  LPCR_ContactEnfant__r.LPCR_Representant2__r.FirstName &amp;&#39; &#39;&amp; LPCR_ContactEnfant__r.LPCR_Representant1__r.LastName)</formula>
    <label>Représentant 2</label>
    <type>Text</type>
</CustomField>