force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_Signe__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Signe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le bon d&apos;achat est signé par le gestionnaire</description>
    <label>Signé</label>
    <type>Checkbox</type>
</CustomField>