force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/LPCR_TelephoneFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TelephoneFamille__c</fullName>
    <description>numéro de téléphone mobile du représentant 1</description>
    <formula>LPCR_ContactEnfant__r.LPCR_Representant1__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>numéro de téléphone mobile du représentant 1</inlineHelpText>
    <label>Telephone Famille</label>
    <type>Text</type>
</CustomField>