force-app/main/default/objects/LPCR_BonAchatPartenaire__c/fields/Tech_URLRetourAdobeSign__c.field-meta.xml
<CustomField>
    <fullName>Tech_URLRetourAdobeSign__c</fullName>
    <description>champ utilisé dans le modèle d&apos;accord Adobe Sign pour rediriger l&apos;utilisateur vers l&apos;enregistrement après l&apos;envoi pour signature</description>
    <formula>LEFT($Api.Enterprise_Server_URL_490,FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_490))&amp;CASESAFEID(Id)</formula>
    <label>Tech_URL Retour Adobe Sign</label>
    <type>Text</type>
</CustomField>